@@ -3,6 +3,7 @@ Change log
 
 1.22 (unreleased)
 -----------------
+- add option ``-n`` to skip checkout and build of software packages
 
 
 1.21 (2018-06-29)
